# otus-cpp-basics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  argument.cpp  argument.h  check_value.cpp  check_value.h  game.cpp  game.h  guess_the_number.cpp  high_scores.cpp  high_scores.h  high_scores.txt  move_me_out.cpp  random_value.cpp  random_value.h
include/: IStatistics.hpp  Max.hpp  Mean.hpp  Min.hpp  Stdev.hpp  add.hpp  div.hpp  mul.hpp  sub.hpp  variable.hpp
src/: Max.cpp  Mean.cpp  Min.cpp  Stdev.cpp  add.cpp  div.cpp  main.cpp  mul.cpp  parser.cpp  statistics.cpp  sub.cpp  variable.cpp
